GNOME Bugzilla – Bug 676495
[a52dec] really prefer the original number (and position) of channels
Last modified: 2012-05-24 13:50:44 UTC
Created attachment 214561 [details] file that contains 3 audio channels (Front Left, Front Center and Front Right) * steps to reproduce the problem: gst-launch-0.10 filesrc location=chan_nb_3.ac3 ! ac3parse ! a52dec ! "audio/x-raw-float, channels=3" ! fakesink silent=1 -v or gst-launch-0.10 audiotestsrc ! "audio/x-raw-int, rate=48000" ! audioconvert ! "audio/x-raw-float, channels=3" ! ffenc_ac3 ! a52dec ! "audio/x-raw-float, channels=3" ! fakesink silent=1 -v * Actual result: Not playing: "not-negotiated" * Expected result: Play.
Created attachment 214562 [details] [review] a52dec: really prefer the original number (and position) of channels In the previous code, gsta52dec is trying to use (A52_STEREO | A52_LFE) instead of original A52_3F. The patch at least allows to use the original position if the requested number of channels is equal to the original number of channels. I think it needs more work to handle the case where the requested number of channels is lower than original. Actually in most cases it should work but "const int a52_channels tab[6]" should be computed ...
commit c1ef92a3adfc6aa43eb07a752e23aed61fcee487 Author: Julien Isorce <julien.isorce@gmail.com> Date: Mon May 21 14:57:44 2012 +0200 a52dec: really prefer the original number (and position) of channels Fixes https://bugzilla.gnome.org/show_bug.cgi?id=676495