a52dec: really prefer the original number (and position) of channels

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=676495